# runtime-macros-derive

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: test.yml
examples/custom_assert/: Cargo.toml
examples/custom_assert/src/: lib.rs
examples/custom_assert/tests/: tests.rs
examples/custom_assert/tests/compile-fail/: syntax_error.rs
examples/custom_attribute/: Cargo.toml
examples/custom_attribute/src/: lib.rs
examples/custom_attribute/tests/: tests.rs
examples/custom_attribute/tests/compile-fail/: syntax_error.rs
examples/custom_derive/: Cargo.toml
examples/custom_derive/src/: lib.rs
src/: attr_macro_visitor.rs  lib.rs
