[package]
name = "custom_attribute"
version = "0.1.0"
edition = "2021"
authors = ["Bartłomiej Kuras <bart.k@confio.gmbh>"]

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.2"
syn = { version = "1.0.100", features = ["derive", "parsing", "printing", "full"] }

[dev-dependencies]
runtime-macros-derive = { path = "../.." }

