[package]
name = "custom_derive"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2018"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.2"

[dependencies.syn]
version = "2.0.90"
features = ["derive", "extra-traits", "parsing", "printing", "full"]

[dev-dependencies]
runtime-macros-derive = { path = "../.." }
