[package]
name = "custom_derive"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"

[dependencies.syn]
version = "2.0.101"
features = ["derive", "extra-traits", "parsing", "printing", "full"]

[dev-dependencies]
sylvia-runtime-macros = { path = "../.." }
